kubesimplify/base/deploy.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: go-ks-app-arm64
    namespace: kubesimplify-go
    labels:
      app: go-ks-app-arm64
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: go-ks-app-arm64
    template:
      metadata:
        labels:
          app: go-ks-app-arm64
      spec:
        containers:
          - name: go-ks-app-arm64
            image: docker.io/kanukhosla10/go-kubesimplify:sha-5c5a6ab
            imagePullPolicy: Always
            ports:
              - containerPort: 8080
            readinessProbe:
              httpGet:
                path: /health
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
            livenessProbe:
              httpGet:
                path: /health
                port: 8080
              initialDelaySeconds: 15
              periodSeconds: 20
            resources:
              requests:
                memory: 350Mi
                cpu: 250m
              limits:
                memory: 500Mi
                cpu: 500m
